[gd_scene load_steps=5 format=1]

[ext_resource path="res://Source/Cutscenes/sprites/alice.png" type="Texture" id=1]
[ext_resource path="res://Source/Cutscenes/sprites/rowan.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Cutscene.gd" type="Script" id=3]
[ext_resource path="res://Source/OxygenMono-Regular.fnt" type="BitmapFont" id=4]

[node name="Background" type="TextureFrame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
stretch_mode = 0

[node name="char1" type="Sprite" parent="."]

transform/pos = Vector2( 181.964, 380.491 )
transform/scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="char2" type="Sprite" parent="."]

transform/pos = Vector2( 880.385, 356.558 )
transform/scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 2 )
flip_h = true

[node name="TextPanel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 33.0
margin/top = 444.0
margin/right = 995.0
margin/bottom = 587.0
script/script = ExtResource( 3 )

[node name="Next" type="MenuButton" parent="TextPanel"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 868.0
margin/top = 99.0
margin/right = 980.0
margin/bottom = 151.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "Next"
flat = true
items = [  ]

[node name="Text" type="Label" parent="TextPanel"]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 13.0
margin/right = 1045.0
margin/bottom = 155.0
custom_fonts/font = ExtResource( 4 )
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="TextPanel/Next" to="TextPanel" method="_on_Next_pressed"]


